# log-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
config/values/: analyzer.env
log_analyzer/: config.py
log_analyzer/analysis/io/: __init__.py  data_input.py  data_output.py
log_analyzer/analysis/models/: __init__.py  data_schema.py
log_analyzer/analysis/processing/: __init__.py  data_analyzer.py  data_parser.py
log_analyzer/utils/: __init__.py  analyzer_utils.py  parser_utils.py
log_analyzer/visualization/: app.py
scripts/: main.py
tests/: conftest.py
tests/analysis/io/: test_data_input.py  test_data_output.py
tests/analysis/models/: test_data_schema.py
tests/analysis/processing/: test_data_analyzer.py
tests/utils/: test_analyzer_utils.py  test_parser_utils.py
